--- a/app/src/main/res/layout/fragment_friday_schedule.xml
+++ b/app/src/main/res/layout/fragment_friday_schedule.xml
@@ -2,12 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.ascebuffalo.asce.FridayScheduleFragment">
+    tools:context="org.ascebuffalo.asce.DayScheduleFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_friday_schedule"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
