--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -4,14 +4,16 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="org.ascebuffalo.asce.ScheduleFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
   <android.support.design.widget.TabLayout
       android:id="@+id/nav_schedule_tabs"
       app:tabMode="fixed"
       app:tabGravity="fill"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"/>
+      android:layout_height="wrap_content"
+      android:background="#ccc"/>
 
   <android.support.v4.view.ViewPager
       android:id="@+id/nav_pager"
