--- a/app/src/main/res/layout/fragment_twitter.xml
+++ b/app/src/main/res/layout/fragment_twitter.xml
@@ -4,9 +4,19 @@
     android:layout_height="match_parent"
     tools:context="org.ascebuffalo.asce.TwitterFragment">
 
+
+    <ProgressBar
+        android:id="@+id/pb_twitter"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_twitter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
+
 
 </FrameLayout>
