--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -1,31 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_event_name"
         android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="#111"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Welcome To MRLC 2018"/>
+        tools:text="Welcome To MRLC 2018"
+        android:paddingTop="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"/>
 
     <TextView
         android:id="@+id/tv_event_location"
         android:textAppearance="?android:textAppearanceSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Super Awesome Ballroom"/>
+        tools:text="Super Awesome Ballroom"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"/>
 
     <TextView
         android:id="@+id/tv_event_time"
         android:textAppearance="?android:textAppearanceSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="2:00 - 2:45"/>
+        tools:text="2:00 - 2:45"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#666"
+       android:layout_marginTop="16dp"
+        android:paddingBottom="16dp"/>
 
 
 
