--- a/app/src/main/res/layout/fragment_speakers.xml
+++ b/app/src/main/res/layout/fragment_speakers.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     tools:context="org.ascebuffalo.asce.SpeakersFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_speaker"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello Speakers Fragment" />
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
