1. same change in Mainifest: solve the problem when rotate the phone and the app will returning to the home fragment 2. Add a simple master/detail layout for each speaker 3. polishing for the speaker_list_item

--- a/app/src/main/res/layout/speaker_list_item.xml
+++ b/app/src/main/res/layout/speaker_list_item.xml
@@ -1,6 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/custom_ripple_effect"
+    android:clickable="true">
 
     <ImageView
         android:id="@+id/selfie"
@@ -16,17 +18,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="18dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_toEndOf="@+id/selfie"
         android:text="The name of the professor"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="#111"/>
 
+
+    <ImageView
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/selfie"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:background="#EEEEEE" />
 
 </RelativeLayout>
