--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,11 +8,11 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/action_search"
         android:title="@string/search"
         android:orderInCategory="200"
         android:icon="@drawable/ic_search_white_24dp"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.widget.SearchView" />
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 
 </menu>
