--- a/app/src/main/res/layout/speaker_list_item.xml
+++ b/app/src/main/res/layout/speaker_list_item.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:background="@drawable/custom_ripple_effect"
     android:clickable="true">
 
@@ -13,31 +13,48 @@
         android:layout_marginTop="8dp"
         android:src="@drawable/ic_person_pin" />
 
-    <TextView
-        android:id="@+id/professor_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@+id/selfie"
-        android:text="The name of the professor"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="#111"/>
-
-
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="16dp"
-        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/selfie"
+        >
+
+        <TextView
+            android:id="@+id/professor_name"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="bottom"
+            android:text="The name of the professor"
+            android:textSize="14sp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="#111"/>
+        <TextView
+            android:id="@+id/position"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="top"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginEnd="16dp"
+            android:text="Towne LLC"
+            android:textSize="12sp"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="#757575"/>
+
+    </LinearLayout>
+
+
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/selfie"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="#EEEEEE" />
