--- a/app/src/main/res/layout/fragment_entertainment.xml
+++ b/app/src/main/res/layout/fragment_entertainment.xml
@@ -1,13 +1,38 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.ascebuffalo.asce.EntertainmentFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello Entertainment Fragment" />
+  <LinearLayout
+      android:id="@+id/ll_root"
+      android:layout_centerVertical="true"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
+      
+      
+     <Button
+         android:id="@+id/button_ent_see_do"
+        android:layout_marginStart="16dp"
+         android:layout_marginEnd="16dp"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:text="See &amp; DO"/>
 
-</FrameLayout>
+      <Button
+          android:id="@+id/button_ent_eat_drink"
+          android:layout_marginEnd="16dp"
+          android:layout_marginStart="16dp"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Eat &amp; Drink"/>
+      
+  </LinearLayout>
+
+
+
+
+
+
+</RelativeLayout>
