--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -1,13 +1,14 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     tools:context="org.ascebuffalo.asce.EventDetailsActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_event_details_name"
@@ -20,7 +21,6 @@
             android:id="@+id/tv_event_details_sections"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_event_details_name"
             android:textAppearance="?android:textAppearanceMedium"
             tools:text="WSBL / ESYMC" />
 
@@ -28,7 +28,6 @@
             android:id="@+id/tv_event_details_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_event_details_sections"
             android:textAppearance="?android:textAppearanceMedium"
             tools:text="Where: Ballroom" />
 
@@ -36,7 +35,6 @@
             android:id="@+id/tv_event_details_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_event_details_location"
             android:textAppearance="?android:textAppearanceMedium"
             tools:text="When: 4:30 - 5:30" />
 
@@ -44,7 +42,6 @@
             android:id="@+id/tv_event_details_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_event_details_time"
             android:paddingTop="16dp"
             android:text="@string/description"
             android:textAppearance="?android:textAppearanceMedium"
@@ -55,12 +52,72 @@
             android:id="@+id/tv_event_details_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_event_details_header"
             android:paddingBottom="4dp"
             android:visibility="gone"
             tools:text="Etsy twee authentic hashtag tofu, hot chicken kale chips artisan snackwave gentrify pabst cray farm-to-table. VHS la croix cliche mlkshk thundercats. Pitchfork PBR B mlkshk, helvetica hexagon hell of paleo edison bulb photo booth slow-carb. Thundercats tacos retro fanny pack snackwave pork belly typewriter street art. Blue bottle you probably haven't heard of them thundercats offal." />
 
 
+        <TextView
+            android:id="@+id/tv_event_details_moderators_header"
+            android:text="Moderators:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_event_details_moderators"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:nestedScrollingEnabled="false"/>
+
+        <TextView
+            android:text="Panelists:"
+            android:id="@+id/tv_event_details_panelists_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_event_details_panelists"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:nestedScrollingEnabled="false"/>
+
+        <TextView
+            android:id="@+id/tv_event_details_presenters_header"
+            android:text="Presenters:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_event_details_presenters"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_event_details_presenters_header"
+            android:layout_marginBottom="8dp"
+            android:nestedScrollingEnabled="false"/>
+
+        <TextView
+            android:id="@+id/tv_event_details_leaders_header"
+            android:text="Leaders:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_event_details_leaders"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:nestedScrollingEnabled="false"/>
+
+
+        <!--
         <TextView
             android:id="@+id/tv_event_details_moderators"
             android:layout_width="match_parent"
@@ -93,5 +150,7 @@
             android:visibility="gone"
             tools:text="Leaders:\nBob Bobertson\nRick Derp" />
 
-    </RelativeLayout>
-</ScrollView>
+            -->
+
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
