--- a/app/src/main/res/layout/fragment_friday_schedule.xml
+++ b/app/src/main/res/layout/fragment_friday_schedule.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.ascebuffalo.asce.DayScheduleFragment">
+    tools:context="org.ascebuffalo.asce.DayScheduleFragment"
+    android:background="#87ceeb">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_friday_schedule"
