--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginBottom="4dp">
+    android:layout_marginBottom="4dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginStart="4dp"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_course_listing"
@@ -15,7 +17,7 @@
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -23,45 +25,80 @@
 
             <TextView
                 android:id="@+id/tv_event_name"
-                android:layout_width="wrap_content"
+                android:layout_width="272dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:paddingEnd="16dp"
                 android:paddingStart="16dp"
                 android:paddingTop="16dp"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="#111"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Welcome To MRLC 2018" />
 
             <TextView
                 android:id="@+id/tv_event_sections"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="2dp"
                 android:paddingEnd="16dp"
                 android:paddingStart="16dp"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:visibility="gone"
-                tools:text="ABCD / EFGY/ DGAF" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_event_name"
+                tools:text="ABCD / EFGY/ DGAF"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/tv_event_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="2dp"
+                android:paddingBottom="16dp"
                 android:paddingEnd="16dp"
                 android:paddingStart="16dp"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:visibility="gone"
-                tools:text="Super Awesome Ballroom" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_event_sections"
+                tools:text="Super Awesome Ballroom"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/tv_event_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
                 android:paddingBottom="4dp"
                 android:paddingEnd="16dp"
                 android:paddingStart="16dp"
-                android:textAppearance="?android:textAppearanceSmall"
-                tools:text="2:00 - 2:45" />
-        </LinearLayout>
+                android:paddingTop="16dp"
+                android:textAppearance="?android:textAppearanceMedium"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="2:00"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tv_event_time2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:paddingBottom="4dp"
+                android:paddingEnd="16dp"
+                android:paddingStart="16dp"
+                android:textAppearance="?android:textAppearanceMedium"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_event_time"
+                tools:text="2:45"
+                tools:visibility="visible" />
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
