--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -1,156 +1,192 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:background="#87ceeb"
+    android:padding="8dp"
     tools:context="org.ascebuffalo.asce.EventDetailsActivity">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginBottom="8dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="4dp">
 
-        <TextView
-            android:id="@+id/tv_event_details_name"
+
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceLarge"
-            tools:text="Welcome" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_event_details_sections"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceMedium"
-            tools:text="WSBL / ESYMC" />
+            <TextView
+                android:id="@+id/tv_event_details_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:textAppearance="?android:textAppearanceLarge"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Welcome" />
 
-        <TextView
-            android:id="@+id/tv_event_details_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceMedium"
-            tools:text="Where: Ballroom" />
+            <TextView
+                android:id="@+id/tv_event_details_sections"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:textAppearance="?android:textAppearanceMedium"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_name"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="38dp"
+                tools:text="WSBL / ESYMC" />
 
-        <TextView
-            android:id="@+id/tv_event_details_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceMedium"
-            tools:text="When: 4:30 - 5:30" />
+            <TextView
+                android:id="@+id/tv_event_details_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:textAppearance="?android:textAppearanceMedium"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_sections"
+                tools:text="Where: Ballroom" />
 
-        <TextView
-            android:id="@+id/tv_event_details_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:text="@string/description"
-            android:textAppearance="?android:textAppearanceMedium"
-            android:textStyle="bold"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/tv_event_details_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:textAppearance="?android:textAppearanceMedium"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_location"
+                tools:text="When: 4:30 - 5:30" />
 
-        <TextView
-            android:id="@+id/tv_event_details_information"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="4dp"
-            android:visibility="gone"
-            tools:text="Etsy twee authentic hashtag tofu, hot chicken kale chips artisan snackwave gentrify pabst cray farm-to-table. VHS la croix cliche mlkshk thundercats. Pitchfork PBR B mlkshk, helvetica hexagon hell of paleo edison bulb photo booth slow-carb. Thundercats tacos retro fanny pack snackwave pork belly typewriter street art. Blue bottle you probably haven't heard of them thundercats offal." />
+            <TextView
+                android:id="@+id/tv_event_details_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:paddingTop="16dp"
+                android:text="@string/description"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_time" />
 
-
-        <TextView
-            android:id="@+id/tv_event_details_moderators_header"
-            android:text="Moderators:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_event_details_moderators"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:nestedScrollingEnabled="false"/>
-
-        <TextView
-            android:text="Panelists:"
-            android:id="@+id/tv_event_details_panelists_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_event_details_panelists"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:nestedScrollingEnabled="false"/>
-
-        <TextView
-            android:id="@+id/tv_event_details_presenters_header"
-            android:text="Presenters:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            <TextView
+                android:id="@+id/tv_event_details_information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:paddingBottom="4dp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_header"
+                tools:text="Etsy twee authentic hashtag tofu, hot chicken kale chips artisan snackwave gentrify pabst cray farm-to-table. VHS la croix cliche mlkshk thundercats. Pitchfork PBR B mlkshk, helvetica hexagon hell of paleo edison bulb photo booth slow-carb. Thundercats tacos retro fanny pack snackwave pork belly typewriter street art. Blue bottle you probably haven't heard of them thundercats offal." />
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_event_details_presenters"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_event_details_presenters_header"
-            android:layout_marginBottom="8dp"
-            android:nestedScrollingEnabled="false"/>
+            <TextView
+                android:id="@+id/tv_event_details_moderators_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/moderators"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
 
-        <TextView
-            android:id="@+id/tv_event_details_leaders_header"
-            android:text="Leaders:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_information" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_event_details_leaders"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:nestedScrollingEnabled="false"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_event_details_moderators"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_moderators_header" />
+
+            <TextView
+                android:id="@+id/tv_event_details_panelists_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/panelists"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rv_event_details_moderators" />
 
 
-        <!--
-        <TextView
-            android:id="@+id/tv_event_details_moderators"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_event_details_information"
-            android:visibility="gone"
-            tools:text="Moderators:\nBob Bobertson\nRick Derp" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_event_details_panelists"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_panelists_header" />
 
-        <TextView
-            android:id="@+id/tv_event_details_panelists"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_event_details_moderators"
-            android:visibility="gone"
-            tools:text="Speakers:\nBob Bobertson\nRick Derp" />
+            <TextView
+                android:id="@+id/tv_event_details_presenters_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/presenters"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rv_event_details_panelists" />
 
-        <TextView
-            android:id="@+id/tv_event_details_presenters"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_event_details_panelists"
-            android:visibility="gone"
-            tools:text="Presenters:\nBob Bobertson\nRick Derp" />
 
-        <TextView
-            android:id="@+id/tv_event_details_leaders"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_event_details_presenters"
-            android:visibility="gone"
-            tools:text="Leaders:\nBob Bobertson\nRick Derp" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_event_details_presenters"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_event_details_presenters_header"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_presenters_header" />
 
-            -->
+            <TextView
+                android:id="@+id/tv_event_details_leaders_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/leaders"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rv_event_details_presenters" />
 
-    </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_event_details_leaders"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_event_details_leaders_header" />
+
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
 </android.support.v4.widget.NestedScrollView>
