--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -13,9 +13,12 @@
         android:id="@+id/card_view_course_listing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         app:cardCornerRadius="4dp"
-        app:cardElevation="4dp">
+        app:cardElevation="2dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
