--- a/app/src/main/res/layout/speaker_detail.xml
+++ b/app/src/main/res/layout/speaker_detail.xml
@@ -56,7 +56,8 @@
             android:id="@+id/title_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
 
             <LinearLayout
