Further polished schedule, minor change to speakerAdapter constructor.
Now requires a boolean to determine if it is adapting for speaker list on speaker page vs. speaker list on schedule event page. Each use different layout, and so the layoutItemId is determind within the adapter based on this boolean value.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -39,9 +39,9 @@
     <item android:title="Social Media">
         <menu>
             <item
-                android:id="@+id/nav_facebook"
-                android:icon="@drawable/ic_action_facebook"
-                android:title="Facebook" />
+                android:id="@+id/nav_groupme"
+                android:icon="@drawable/ic_chat_black_24dp"
+                android:title="GroupMe" />
             <item
                 android:id="@+id/nav_twitter"
                 android:icon="@drawable/ic_action_twitter"
